src/stylus/api.styl
.docs {
  h2 {
    margin-top: 2em;
    border-bottom: 5px solid $blue-border;

    font-size: 1.5em;
    font-weight: 400;
    -webkit-font-smoothing: antialiased;
  }

  h1 + h2 {
    margin-top: 0.75em;
  }

  h3 {
    display: block;
    margin: 1.5em 0 1em;
    padding-top: 1em;
    border-top: 1px solid $blue-border;

    font-size: 1.125em;

    code,
    em {
      display: block;

      color: #555;
      font-family: $code;
      font-size: 13px;
      font-style: normal;
      font-weight: 500;
    }
  }

  h2 + h3 {
    margin: 1em 0;
    padding: 0;
    border-top: 0;
  }

  table {
    width: 100%;
    margin: 1em 0;

    font-size: 0.875em;
  }

  tr {
    display: block;
    margin-bottom: 20px;

    background: #fff;
  }

  th {
    text-align: left;
  }

  td, th {
    display: block;
    padding: 6px;
    border: 1px solid $blue-border;

    &:first-child {
      border-bottom-width: 0;

      background: $blue-tint;
      white-space: nowrap;
    }
  }

  p > code,
  li > code {
    padding: 0 5px;
    border: 1px solid $blue-border;
    border-radius: 3px;

    background-color: lighten($blue-border, 55%);
  }
}

.api {
  @extend $nano-col2-3;
  @extend $kilo-col3-4;
}

.sidebar-container {
  @extend $nano-col1-3;
  @extend $nano-push2-3;
  @extend $kilo-col1-4;
  @extend $kilo-push3-4;

  position: relative;
}

.sidebar {
  font-size: 14px;
  font-weight: bold;

  ul {
    padding: 0;
  }

  input {
    box-sizing: border-box;
    width: 100%;
    padding: 5px 8px;
    position: relative;
    z-index: 2;

    outline: none;

    border: 1px solid $blue-border;
    border-radius: 50px;

    &:focus {
      box-shadow: 0 0 5px 2px rgba($blue, 0.5);
    }
  }
}

.sidebar input:focus + .search-results {
  display: block;
}

.search-container {
  width: 100%;
  margin: 1em 0;
  position: relative;
}

#search-reset {
  position: absolute;
  top: 5px;
  right: 5px;
  z-index: 2;
  
  width: 18px;
  height: 18px;
  padding: 0;
  border: 0;
  border-radius: 50%;

  background: #e9e9e9;
  color: #999;
  font-size: 18px;
  font-weight: 700;

  &:after {
    content: '\00d7';
    position: absolute;
    top: -1px;
    left: 4px;

    display: block;
  }
}

.sidebar-primary {
  a {
    display: block;
    margin: 8px 0px 0;

    color: $primary;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }
}

.sidebar-secondary {
  display: none;
  margin: 0 0 1em;

  font-weight: normal;
  font-size: 14px;

  a {
    margin: 4px 0;

    color: $blue;

    font-weight: normal;
    text-rendering: optimizeLegibility;
  }
}

.top {
  display: none;

  color: #222;
  font-weight: normal;
  font-size: 12px;

  span {
    font-size: 8px;
  }
}

/* ==========================================================================
   Screens 35em (560px) and Larger (Nano)
   ========================================================================== */

@media only screen and (min-width: 35em) {
  .docs {
    h2 {
      font-size: 2em;
    }

    h3 {
      font-size: 1.5em;

      code,
      em {
        display: inline;
        margin-left: 1.5em;
      }
    }

    tr {
      display: table-row;
    }

    th,
    td {
      display: table-cell;

      &:first-child {
        border-bottom-width: 1px;

        background: transparent;
      }
    }
  }

  .sidebar {
    position: absolute;
    top: 1.5em;

    width: 100%;
    max-width: 148px;

    &.fixed {
      position: fixed;
    }
  }

  .top {
    display: block;
  }
}

/* ==========================================================================
   Screens 55em (880px) and Larger (Kilo)
   ========================================================================== */

@media only screen and (min-width: 55em) {
  .docs {
    table {
      font-size: 1em;
    }

    td,
    th {
      padding: 6px 12px;
    }
  }

  .sidebar {
    max-width: 175px;
  }
}

/* ==========================================================================
   Screens 65em (1040px) and Larger (Max)
   ========================================================================== */

@media only screen and (min-width: 65em) {
  .sidebar {
    max-width: 218px;
  }
}

